# task-deck-bot

./: .prettierignore  README.md  Taskfile.yaml  package-lock.json  package.json
.github/actions/setup_environment/: action.yaml
.github/workflows/: check-pr.yaml
.scripts/: Taskfile.yaml  pyproject.toml
.scripts/bash/: environment_activate
backend/: .lintstagedrc.json  Dockerfile  README.md  Taskfile.yaml  docker-bake.hcl  pyproject.toml  trivy.yaml
backend/lib/app/: app.py  errors.py  settings.py
backend/lib/utils/: json.py  lifecycle.py
backend/lib/utils/aiogram/: __init__.py  lifecycle.py  messages.py
backend/lib/utils/aiogram/filters/message/: sender.py
backend/lib/utils/aiohttp/: __init__.py
backend/lib/utils/aiohttp/handlers/: __init__.py  responses.py
backend/lib/utils/aiohttp/handlers/health/: __init__.py  liveness_probe.py  readiness_probe.py
backend/lib/utils/aiohttp/logging/: printer.py
backend/lib/utils/logging/: config.py
backend/lib/utils/pydantic/: base.py  settings.py
